project(project2)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)

set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

#set(PROJECT_INCLUDES
#${PROJECT_INCLUDE_DIR}/some.h
#${PROJECT_INCLUDE_DIR}/other.h
#)

#set(PROJECT_SOURCES
#${PROJECT_SOURCE_DIR}/main.cpp
#${PROJECT_SOURCE_DIR}/some.cpp
#${PROJECT_SOURCE_DIR}/other.cpp
#)

file(GLOB_RECURSE PROJECT_INCLUDES ${PROJECT_INCLUDE_DIR} *.h)
message(STATUS ${PROJECT_INCLUDES})

file(GLOB_RECURSE PROJECT_SOURCES ${PROJECT_SOURCE_DIR} *.cpp)
message(STATUS ${PROJECT_SOURCES})

include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_INCLUDE_DIR}")

add_library(${PROJECT_NAME} STATIC ${PROJECT_INCLUDES} ${PROJECT_SOURCES})
